fix: repo and website link at hover in dark mode to color blue

--- a/layouts/partials/links/website.html
+++ b/layouts/partials/links/website.html
@@ -1,1 +1,1 @@
-<a href="{{ . }}" class="btn text-slate-900 dark:text-slate-50 mr-2 hover:text-sky-500" title="Web" target="_blank"><i data-feather="globe"></i></a>
+<a href="{{ . }}" class="mr-2 text-slate-900 dark:text-slate-50 hover:text-sky-600 dark:hover:text-sky-500 hover:no-underline dark:no-underline" title="Web" target="_blank"><i data-feather="globe"></i></a>
