--- a/layouts/partials/links/repo.html
+++ b/layouts/partials/links/repo.html
@@ -1,1 +1,1 @@
-<a href="{{ . }}" class="btn text-slate-900 dark:text-slate-50 hover:text-sky-500" title="Project repository" target="_blank"><i data-feather="github"></i></a>
+<a href="{{ . }}" class="mr-2 text-slate-900 dark:text-slate-50 hover:text-sky-600 dark:hover:text-sky-500 hover:no-underline dark:no-underline" title="Project repository" target="_blank"><i data-feather="github"></i></a>
