fix: add margin bottom 1rem

--- a/layouts/shortcodes/imgresize.html
+++ b/layouts/shortcodes/imgresize.html
@@ -1,2 +1,2 @@
 {{ $image := (.Page.Resources.GetMatch (.Get 0)).Resize "720x webp" }}
-<img src="{{ $image.RelPermalink }}" class="rounded-md">
+<img src="{{ $image.RelPermalink }}" class="mb-4 rounded-md">
