fix: copy link's link remove utm

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -82,7 +82,7 @@
               <input type="text" 
                 id="post-link"
                 class="hidden"
-                value="{{ printf "%s%s" .Permalink "?utm_source=link&utm_medium=link&utm_campaign=user-share" }}" 
+                value="{{ .Permalink }}" 
               >
               <a href="javascript:;" 
                 id="copy-link"
