feat: add turbo for spa speed

--- a/layouts/partials/links.html
+++ b/layouts/partials/links.html
@@ -12,3 +12,7 @@
   {{ $favicon := .Fill "16x16 png" }}
   <link rel="icon" type="image/png" href="{{ $favicon.Permalink }}" sizes="16x16" />
 {{ end }}
+
+<script type="module">
+  import hotwiredTurbo from 'https://cdn.skypack.dev/pin/@hotwired/turbo@v7.1.0-V83RMQBlYCPK9CvTqQoL/mode=imports,min/optimized/@hotwired/turbo.js';
+</script>
