--- a/layouts/partials/gtm-noscript.html
+++ b/layouts/partials/gtm-noscript.html
@@ -1,6 +1,8 @@
-{{ with .Site.Params.gtm_id }}
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ . }}"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+{{ if hugo.IsProduction }}
+  {{ with .Site.Params.gtm_id }}
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ . }}"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+  {{ end }}
 {{ end }}
