--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -1,2 +1,2 @@
 <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-<script src="{{ "js/main.js" | absURL }}"></script>
+<script src="{{ "js/main.js?v=2" | absURL }}"></script>
