--- a/layouts/partials/cards/post.html
+++ b/layouts/partials/cards/post.html
@@ -14,7 +14,7 @@
       {{ end }}
     {{ end }}
 
-    <img src="{{- $thumb.RelPermalink -}}" class="h-[13rem] object-cover w-full" alt="{{ .Title }}'s featured image">
+    <img data-src="{{- $thumb.RelPermalink -}}" class="h-[13rem] lozad object-cover w-full" alt="{{ .Title }}'s featured image">
   </div>
 
   <!-- body  -->
