--- a/layouts/partials/head-script.html
+++ b/layouts/partials/head-script.html
@@ -1,2 +1,3 @@
 {{- partial "gtm.html" . -}}
 {{- partial "dark-mode-checker.html" . -}}
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
