feat: add click image to open image in new tab

--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,2 +1,4 @@
 {{ $image := (.Page.Resources.GetMatch (.Get 0)) }}
-<img data-src="{{ $image.RelPermalink }}" class="h-auto lozad mb-4 rounded-md w-[792px]" alt="{{ $image }}">
+<a href="{{ $image.RelPermalink }}" target="_blank">
+  <img data-src="{{ $image.RelPermalink }}" class="h-auto lozad mb-4 rounded-md w-[792px]" alt="{{ $image }}">
+</a>
