feat: add search feature

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,12 +1,15 @@
 {{ define "main" }}
   <div class="container">
-    <h2 class="mb-11">
-      {{ .Name }} 
-      {{ if gt .Paginator.PageNumber 1 }}
-        {{ $label := printf "%s%d" "Page " .Paginator.PageNumber }}
-        {{ partial "badges/titletag.html" $label }}
-      {{ end }}
-    </h2>
+    <div class="flex flex-col sm:flex-row mb-11 justify-between">
+      <h2>
+        {{ .Name }} 
+        {{ if gt .Paginator.PageNumber 1 }}
+          {{ $label := printf "%s%d" "Page " .Paginator.PageNumber }}
+          {{ partial "badges/titletag.html" $label }}
+        {{ end }}
+      </h2>
+      {{ partial "search-form.html" . }}
+    </div>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-10">
       {{ range (.Paginate (.Pages.ByPublishDate.Reverse)).Pages }}
         {{ partial "cards/post.html" . }}
