--- a/layouts/partials/head-script.html
+++ b/layouts/partials/head-script.html
@@ -1,3 +1,4 @@
 {{- partial "gtm.html" . -}}
 {{- partial "dark-mode-checker.html" . -}}
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lunr@2.3.9/lunr.min.js"></script>
