--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 {{ $site := .Site }}
   <section>
     <div class="container max-w-3xl">
-      <h1 class="mb-3">{{ .Title }}</h1>
+      <h1 class="leading-snug mb-3">{{ .Title }}</h1>
       
       <div class="mb-3">
         {{ $dateTime := .PublishDate.Format "2006-01-02" }}
