--- a/layouts/partials/cards/post.html
+++ b/layouts/partials/cards/post.html
@@ -22,7 +22,7 @@
 
     <!-- title  -->
     <a href="{{ .RelPermalink }}" class="text-slate-900 dark:text-slate-50 hover:no-underline hover:text-sky-600 dark:hover:text-sky-500">
-      <h3>{{ .Title }}</h3>
+      <h3 class="leading-normal">{{ .Title }}</h3>
     </a>
 
     <!-- summary  -->
