--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -56,9 +56,10 @@
 
 <meta itemprop="image" content="{{ $ogimage.Permalink }}" />
 <meta property="og:image" itemprop="image" content="{{ $ogimage.Permalink }}" /> 
-<meta property="og:image:type" content="image/jpg" />
 <meta property="og:image:secure_url" itemprop="image" content="{{ $ogimagewa.Permalink }}" /> 
 <meta property="og:image:type" content="image/jpg" />
+<meta property="og:image:width" content="256">
+<meta property="og:image:height" content="256">
 <meta name="twitter:image" content="{{ $ogimage.Permalink }}" />
 <meta name="twitter:image:src" content="{{ $ogimage.Permalink }}" /> 
 
